--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -45,12 +45,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoProfiler.cs" />
+    <Compile Include="Columns.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Columns.resx</DependentUpon>
+    </Compile>
     <Compile Include="Consts.cs" />
     <Compile Include="DisposableObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Columns.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Columns.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
