Upgrade tables and added services

--- a/BBAuto.Logic/BBAuto.Logic.csproj
+++ b/BBAuto.Logic/BBAuto.Logic.csproj
@@ -113,10 +113,18 @@
     <Compile Include="Services\Account\AccountService.cs" />
     <Compile Include="Services\Account\IAccountRepository.cs" />
     <Compile Include="Services\Account\IAccountService.cs" />
+    <Compile Include="Services\Car\CarMappingProfile.cs" />
+    <Compile Include="Services\Car\CarModel.cs" />
+    <Compile Include="Services\Car\CarService.cs" />
+    <Compile Include="Services\Car\ICarService.cs" />
     <Compile Include="Services\Dealer\DealerMappingProfile.cs" />
     <Compile Include="Services\Dealer\DealerModel.cs" />
     <Compile Include="Services\Dealer\DealerService.cs" />
     <Compile Include="Services\Dealer\IDealerService.cs" />
+    <Compile Include="Services\Mileage\IMileageService.cs" />
+    <Compile Include="Services\Mileage\MileageMappingProfile.cs" />
+    <Compile Include="Services\Mileage\MileageModel.cs" />
+    <Compile Include="Services\Mileage\MileageService.cs" />
     <Compile Include="Static\MyExtension.cs" />
     <Compile Include="ForCar\CarInfo.cs" />
     <Compile Include="ForDriver\FuelCard.cs" />
