--- a/BBAuto.Logic/BBAuto.Logic.csproj
+++ b/BBAuto.Logic/BBAuto.Logic.csproj
@@ -126,6 +126,9 @@
     <Compile Include="Services\DiagCard\DiagCardModel.cs" />
     <Compile Include="Services\DiagCard\DiagCardService.cs" />
     <Compile Include="Services\DiagCard\IDiagCardService.cs" />
+    <Compile Include="Services\Documents\Document.cs" />
+    <Compile Include="Services\Documents\IDocument.cs" />
+    <Compile Include="Services\Documents\IDocumentsService.cs" />
     <Compile Include="Services\Mileage\IMileageService.cs" />
     <Compile Include="Services\Mileage\MileageMappingProfile.cs" />
     <Compile Include="Services\Mileage\MileageModel.cs" />
@@ -174,7 +177,7 @@
     <Compile Include="ForCar\SsDTP.cs" />
     <Compile Include="ForDriver\UserAccess.cs" />
     <Compile Include="Lists\CarDocList.cs" />
-    <Compile Include="Common\CreateDocument.cs" />
+    <Compile Include="Services\Documents\DocumentsService.cs" />
     <Compile Include="Common\MyDateTime.cs" />
     <Compile Include="Common\OfficeDoc.cs" />
     <Compile Include="Common\Template.cs" />
