--- a/BBAuto.Repositories/BBAuto.Repositories.csproj
+++ b/BBAuto.Repositories/BBAuto.Repositories.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Entities\DbDriver.cs" />
     <Compile Include="Entities\DbInvoice.cs" />
     <Compile Include="Entities\DbMileage.cs" />
+    <Compile Include="Entities\DbViolation.cs" />
     <Compile Include="IDbContext.cs" />
     <Compile Include="Interfaces\IDbCarDoc.cs" />
     <Compile Include="Interfaces\IDbAccount.cs" />
@@ -76,6 +77,7 @@
     <Compile Include="Interfaces\IDbDriver.cs" />
     <Compile Include="Interfaces\IDbInvoice.cs" />
     <Compile Include="Interfaces\IDbMileage.cs" />
+    <Compile Include="Interfaces\IDbViolation.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
